[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
